# nl-code

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TESTING.md  pyproject.toml
data/humaneval-dspy-sample-performance/: README.md  humaneval_gpt5nano_all_settings_sample_performance.csv  humaneval_gpt5nano_baseline_sample_performance.csv  humaneval_gpt5nano_direct_sample_performance.csv  humaneval_gpt5nano_encdec_sample_performance.csv  humaneval_gpt5nano_non_baseline_sample_performance.csv  humaneval_gpt5nano_worst_all_settings_sample_sets.json  humaneval_sample_performance_aggregate.csv  humaneval_sample_performance_evidence.csv
docker/: scientific.Dockerfile  slim.Dockerfile
docs/: dspy-eval-optimizer-extraction-progress.md  dspy-log-sessions-v0.md  humaneval-encdec-prompt-optimization-figures.md  session_000018_gepa_prompt_variants.md
nbs/: bigcodebench_lite_pro_validation.py  classeval_ground_truth.py  classeval_validation.py  humaneval_description_quality.py  humaneval_plus_validation.py  humaneval_pro_validation.py  mbpp_pro_validation.py  test_suite.py
nbs/code_eval/: analysis.py  one_fxn.py
nbs/exp/: human_eval_dspy.py
scripts/: build_dspy_gepa_agent_bundle.py  export_humaneval_sample_performance.py  humaneval_dspy_eval.py  inspect_dspy_eval_session.py  inspect_dspy_gepa_session.py  optimize_humaneval_dspy_direct.py  optimize_humaneval_dspy_direct_gepa.py  optimize_humaneval_dspy_encdec.py  optimize_humaneval_dspy_encdec_gepa.py  parse_humaneval_dspy_logs.py  plot_humaneval_encdec_prompt_optimization.py  plot_humaneval_encdec_prompt_optimization_eval_only.py  sample_humaneval_dspy_splits.py  sessionize_dspy_logs_v0.py  summarize_humaneval_dspy_optimization.py
src/nl_code/: __init__.py  code_analysis.py  code_parsing.py  code_validation.py  test_cli.py
tests/: conftest.py  test_bigcodebench_lite_pro_dataset.py  test_bigcodebench_lite_pro_task.py  test_build_dspy_gepa_agent_bundle.py  test_classeval_dataset.py  test_classeval_task.py  test_code_analysis.py  test_code_parsing.py  test_code_validation.py  test_dataset.py  test_dataset_cache_cli.py  test_dataset_explorer_compare.py  test_dataset_helpers.py  test_dataset_slice.py  test_datasets_init.py  test_execution_models.py  test_execution_runner.py  test_execution_worker.py  test_gt_verification.py  test_humaneval_dataset.py  test_humaneval_dspy_eval.py  test_humaneval_dspy_gepa.py  test_humaneval_dspy_logs.py  test_humaneval_dspy_optimize.py  test_humaneval_dspy_sample.py  test_humaneval_pro_dataset.py  test_humaneval_pro_task.py  test_humaneval_task.py  test_inspect_dspy_eval_session.py  test_inspect_dspy_gepa_session.py  test_length.py  test_mbpp_pro_dataset.py  test_mbpp_pro_task.py  test_overlap.py  test_sample_humaneval_dspy_splits.py  test_task.py  test_test_cli.py  test_tokenizer.py
ui/dataset-explorer/: .gitignore  README.md
ui/dspy-eval-static-viewer/: README.md  (+1 more)
(+84 files in other folders)
