[project]
name = "nl-code"
version = "0.1.0"
description = "Primitives for research into LLMs and code"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.0",
    "datasets>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo[recommended]>=0.19.7",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
