[project]
name = "nl-code"
version = "0.1.0"
description = "Primitives for research into LLMs and code"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.0",
    "datasets>=3.0.0",
]

[project.optional-dependencies]
bigcodebench = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pytz>=2024.1",
    "python-dateutil>=2.9",
    "holidays>=0.60",
    "regex>=2024.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo[recommended]>=0.19.7",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
