[project]
name = "nl-code"
version = "0.4.1"
description = "Primitives for research into LLMs and code"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.0",
    "datasets>=3.0.0",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "typer>=0.24.1",
    "python-dotenv>=1.2.2",
    "dr-docker==0.4.3",
]

[project.optional-dependencies]
docker = [
    "dr-docker>=0.4.2",
]
bigcodebench = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pytz>=2024.1",
    "python-dateutil>=2.9",
    "holidays>=0.60",
    "regex>=2024.4",
    "beautifulsoup4>=4.12",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "gensim>=4.3",
    "nltk>=3.9",
    "PyPDF2>=3.0",
    "reportlab>=4.2",
]

[project.scripts]
nl-code-test = "nl_code.test_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo[recommended]>=0.19.7",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.pytest.ini_options]
markers = [
    "docker: tests that require a running Docker daemon",
]
addopts = "-m 'not docker'"

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ty.environment]
extra-paths = ["./ui/dataset-explorer"]

[tool.ty.src]
include = ["src", "tests"]
